# BitPin

./: .coveragerc  .env-sample  .pre-commit-config.yaml  Dockerfile  Quality_Driven_Vehicle_Routing_Problem.ipynb  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bitpin/: asgi.py  settings.py  urls.py  wsgi.py
content/: admin.py  apps.py  managers.py  models.py  pagination.py  serializers.py  signals.py  urls.py  utils.py  views.py
content/migrations/: 0001_initial.py  0002_post_ema_rating.py
content/tests/: test_models.py  test_signals.py  test_views.py
locale/fa/LC_MESSAGES/: django.po
