[tool.poetry]
name = "bitpin"
version = "0.1.0"
description = "Software Engineer Task: Back-End"
authors = ["Sepehr <bazyar.sepehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
pre-commit = "^3.7.1"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
